<resources>
    <!--Global strings-->
    <string name="app_name">JammyJamz</string>
    <string name="activity_label_post_search">PostSearch</string>
    <string name="activity_label_write_post">WritePost</string>
    <string name="menu_action_sign_out">Sign Out</string>
    <string name="content_description_menu_action_sign_out">Sign out</string>
    <string name="shared_preferences_key_username">com.palarz.mike.jammyjamz.username</string>
    <string name="no_internet_connection">Internet connection lost :/</string>

    <!--Default shared preferences-->
    <string name="shared_preferences_file_name_default">com.palarz.mike.jammyjamz.shared_preferences_default</string>
    <string name="shared_preferences_key_access_token">com.palarz.mike.jammyjamz.shared_preferences_key_access_token</string>
    <string name="shared_preferences_key_token_type">com.palarz.mike.jammyjamz.shared_preferences_key_token_type</string>
    <string name="shared_preferences_key_access_token_expiration">com.palarz.mike.jammyjamz.shared_preferences_key_access_token_expiration</string>
    <string name="shared_preferences_key_access_token_time_saved">com.palarz.mike.jammyjamz.shared_preferences_key_access_token_time_saved</string>

    <!--Newsfeed-->
    <string name="newsfeed_content_description_newsfeed">Newsfeed</string>
    <string name="newsfeed_content_description_fab">New post</string>

    <!--Post list item layout-->
    <string name="list_item_post_username_default">Anonymous</string>
    <string name="list_item_post_username_testing">Mike Palarz</string>
    <string name="list_item_post_message_testing">This is a message within a post</string>
    <string name="list_item_post_title_testing">Hello, world!</string>
    <string name="list_item_post_artist_testing">Why, hello to you too!</string>
    <string name="list_item_post_content_description_profile_pic">Profile picture</string>
    <string name="list_item_post_content_description_artwork">Artwork</string>

    <!--Search result list item layout-->
    <string name="list_item_search_result_title_default">Title</string>
    <string name="list_item_search_result_artist_default">Artist</string>
    <string name="list_item_search_result_content_description_artwork">Artwork</string>

    <!--PostSearch-->
    <string name="post_search_search_hint">Search jamz</string>
    <string name="post_search_content_description_recyclerview">Search results</string>
    <string name="post_search_menu_action_search">Search</string>
    <string name="post_search_content_description_menu_action_search">Search</string>

    <!--PostTypeSelection-->
    <string name="post_type_selection_title">What\'s your jam?</string>
    <string name="post_type_selection_button_positive">Okay</string>
    <string name="post_type_selection_button_negative">Cancel</string>
    <string name="post_type_selection_post_type_track">Track</string>
    <string name="post_type_selection_post_type_album">Album</string>
    <string name="post_type_selection_post_type_artist">Artist</string>

    <!--WritePost-->
    <string name="write_post_message_hint">Jam message</string>
    <string name="write_post_menu_action_add_post">Jam!</string>
    <string name="write_post_content_description_menu_action_add_post">Add post</string>
    <string name="write_post_content_description_profile_pic">Profile picture</string>
    <string name="write_post_content_description_artwork">Artwork</string>

    <!--App widget-->
    <string name="app_widget_content_description_button">Add post</string>
    <string name="app_widget_no_data">No data</string>

</resources>
