<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.palarz.mike.jammyjamz.activity.WritePost">

    <item
        android:id="@+id/write_post_menu_action_add_post"
        android:orderInCategory="1"
        android:title="@string/write_post_menu_action_add_post"
        android:contentDescription="@string/write_post_content_description_menu_action_add_post"
        app:actionLayout="@layout/write_post_action_layout_add_post"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/write_post_menu_action_sign_out"
        android:contentDescription="@string/content_description_menu_action_sign_out"
        android:orderInCategory="100"
        android:title="@string/menu_action_sign_out"
        app:showAsAction="never" />

</menu>
