<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.PostSearch">

    <item
        android:id="@+id/post_search_menu_action_search"
        android:contentDescription="@string/post_search_content_description_menu_action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/post_search_menu_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/post_search_menu_action_sign_out"
        android:contentDescription="@string/content_description_menu_action_sign_out"
        android:orderInCategory="100"
        android:title="@string/menu_action_sign_out"
        app:showAsAction="never" />

</menu>